fancy error printing

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 # lifetch configuration file
-[general]
-fetchText = Hello World!
+[test]
+string = Hello World!
 boolean = true
-number = 15
+unsigned = 15
+float = 3.14159265359
