requires more optimizing, but works.

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 # lifetch configuration file
-[test]ddsdgdfgdfg
-string = Hello World!
+[test]
+strindg = Hello World!
 boolean = true
 unsigned = 15
 float = 3.14159265359
