--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
     runs-on: ${{matrix.os}}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Setup Zig
-        uses: goto-bus-stop/setup-zig@v1.3.0
+        uses: mlugg/setup-zig@v1
         with:
           version: master
 
@@ -28,5 +28,5 @@ jobs:
       - name: Archive executable
         uses: actions/upload-artifact@v3
         with:
-          name: poop
+          name: lifetch
           path: zig-out/bin/*
