--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,9 @@ jobs:
         run: zig build -Doptimize=ReleaseFast
 
       - name: Archive executable
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: lifetch
           path: zig-out/bin/*
+          if-no-files-found: error
+          compression-level: 6
